--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,8 +15,11 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - uses: actions/checkout@v3
+        with:
+          swift-version: "5.8"
+      - name: Build
+        run: swift build -v
+      - name: Run tests
+        run: swift test -v
+
