Trying different config

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,16 +11,18 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        swift: ["5.8"]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: swift-actions/setup-swift@65540b95f51493d65f5e59e97dcef9629ddf11bf
         with:
-          swift-version: "5.8"
-          # Sanity check to make sure we use a valid device in the next step
-      - name: List available devices
-          run: xcrun simctl list devicetypes
-        #generic/platform=iOS is sufficient for just building, - but need to specify concrete destination for tests
-      - name: Build and run tests
-          run: xcodebuild test -scheme ForgeUIPackage -destination 'platform=iOS Simulator,name=iPhone 14 Pro' #or any other name from the list of sim devices
-
-
+          swift-version: ${{ matrix.swift }}
+      - uses: actions/checkout@v3
+      - name: Build
+        run: swift build
+      - name: Run tests
+        run: swift test
