--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,6 +16,8 @@ jobs:
     
     steps:
       - uses: swift-actions/setup-swift@v1
+        with:
+          swift-version: "5.8.0"
       - name: Get Swift version
         run: swift --version
       - uses: actions/checkout@v3
