Changing CI config

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,13 +15,14 @@ jobs:
     runs-on: macos-latest
     
     steps:
+      - uses: actions/checkout@v3
       - uses: swift-actions/setup-swift@v1
         with:
           swift-version: "5.8.0"
       - name: Get Swift version
         run: swift --version
-      - uses: actions/checkout@v3
       - name: Build and Tests
+        run: swift build
       - name: Run tests
         run: swift test
 
