--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -22,9 +22,7 @@ jobs:
       - name: Get Swift version
         run: swift --version
       - name: Build and Tests
-        env:
-          platform: ${{ 'iOS Simulator' }}
-        run: swift build
-      - name: Run tests
-        run: swift test
+        run: xcodebuild test -scheme ForgeUIPackage -destination 'platform=iOS Simulator,OS=15.0,name=iPhone 14 Pro'
+#      - name: Run tests
+#        run: swift test
 
