--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -25,16 +25,9 @@ jobs:
         run: swift --version
       - name: Show eligible build destinations for ForgeUIPackage
         run: xcodebuild -showdestinations -scheme '${{ env.SCHEME }}'
-      - name: Build
-        #run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' build
-      - name: Run tests
-        #run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' test
-
-  create_release:
-
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v3
+      #- name: Build
+      #  run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' build
+      #- name: Run tests
+      #  run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' test
       - name: Create XCFramework
         uses: unsignedapps/swift-create-xcframework@v2
