adding create release step

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -31,3 +31,7 @@ jobs:
       #  run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' test
       - name: Create XCFramework
         uses: unsignedapps/swift-create-xcframework@v2
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
