--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -38,7 +38,7 @@ jobs:
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
@@ -50,7 +50,7 @@ jobs:
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./ForgeUIPackage.zip
           asset_name: ForgeUIPackage.zip
