--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -35,10 +35,10 @@ jobs:
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+#          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
@@ -47,10 +47,10 @@ jobs:
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+#          token: ${{ secrets.GITHUB_TOKEN }}
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./ForgeUIPackage.zip
           asset_name: ForgeUIPackage.zip
