--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -38,9 +38,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
 
@@ -50,7 +49,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./ForgeUIPackage.zip
           asset_name: ForgeUIPackage.zip
