--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,10 +4,10 @@
 name: Swift
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    types:
+      - closed
 
 env:
   SCHEME: ForgeUIPackage
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build:
-
+    if: github.event.pull_request.merged
     runs-on: macos-latest
     
     steps:
