--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,7 +15,6 @@ env:
 
 jobs:
   build:
-    if: github.event.pull_request.merged
     runs-on: macos-latest
     
     steps:
@@ -25,10 +24,12 @@ jobs:
         run: swift --version
       - name: Show eligible build destinations for ForgeUIPackage
         run: xcodebuild -showdestinations -scheme '${{ env.SCHEME }}'
-      #- name: Build
-      #  run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' build
-      #- name: Run tests
-      #  run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' test
+      - name: Build
+        run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' build
+      - name: Run tests
+        run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' test
+
+      if: github.event.pull_request.merged
       - name: Create XCFramework
         uses: unsignedapps/swift-create-xcframework@v2.3.0
 
