--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,9 +4,13 @@
 name: Swift
 
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    
+    types:
+      - closed
+
 env:
   SCHEME: ForgeUIPackage
   TEST_DEVICE: platform=iOS Simulator,name=iPhone 14 Pro,OS=16.2
