--- a/.github/workflows/ReleaseSwift.yml
+++ b/.github/workflows/ReleaseSwift.yml
@@ -19,6 +19,18 @@ jobs:
     runs-on: macos-latest
     
     steps:
+        steps:
+      - uses: actions/checkout@v3
+      - uses: swift-actions/setup-swift@v1
+      - name: Get Swift version
+        run: swift --version
+      - name: Show eligible build destinations for ForgeUIPackage
+        run: xcodebuild -showdestinations -scheme '${{ env.SCHEME }}'
+#      - name: Build
+#        run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' build
+#      - name: Run tests
+#        run: xcodebuild -scheme '${{ env.SCHEME }}' -sdk iphonesimulator -destination '${{ env.TEST_DEVICE }}' test
+
       - name: Create XCFramework
         uses: unsignedapps/swift-create-xcframework@v2.3.0
 
