--- a/.github/workflows/ReleaseSwift.yml
+++ b/.github/workflows/ReleaseSwift.yml
@@ -35,8 +35,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
+          tag_name: ${{ github.event.release.tag_name }}
+          release_name: Release ${{ github.event.release.tag_name }}
           draft: false
           prerelease: false
 
