--- a/.github/workflows/ReleaseSwift.yml
+++ b/.github/workflows/ReleaseSwift.yml
@@ -26,6 +26,11 @@ jobs:
       - name: Show eligible build destinations for ForgeUIPackage
         run: xcodebuild -showdestinations -scheme '${{ env.SCHEME }}'
 
+      - name: GitHub Tag Name example
+        run: |
+           echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+           echo "Tag name from github.ref_name: ${{ github.ref_name }}"
+
       - name: Create XCFramework
         uses: unsignedapps/swift-create-xcframework@v2.3.0
 
@@ -35,8 +40,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          tag_name: ${{ github.event.release.tag_name }}
-          release_name: Release ${{ github.event.release.tag_name }}
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
 
