Fixing tag name

--- a/.github/workflows/ReleaseSwift.yml
+++ b/.github/workflows/ReleaseSwift.yml
@@ -5,11 +5,10 @@ name: Swift
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - 'release/**'
     types:
       - closed
-    tags:
-      - 'v*'
 
 env:
   SCHEME: ForgeUIPackage
